bynkc/tests/fixtures/positive/63_uses_cycle/src/y/main.karn
commons y

uses x

type Yv = Int where Positive
