bynkc/tests/fixtures/negative/49_multi_file_inconsistent_name/src/foo/b.karn
commons bar

type B = Int
